Refactored: Front End Code

--- a/src/components/Dashboard/AdminDashboard.scss
+++ b/src/components/Dashboard/AdminDashboard.scss
@@ -60,6 +60,7 @@
                     align-items: center;
                     // background-color: #202020af;
                     background-color: white;
+                    width: 96%;
                 }
                 .SubBody22 {
                     width: 95%;
