Front End Commit

--- a/src/components/Dashboard/AdminDashboard.css
+++ b/src/components/Dashboard/AdminDashboard.css
@@ -2,14 +2,14 @@
     0% {
         opacity: 0;
         box-shadow: 0 0 0 0 blue;
-   }
+    }
     40% {
         opacity: 1;
-   }
+    }
     70% {
         opacity: 1;
         box-shadow: 0 0 0 40px rgba(0, 0, 0, 0.25);
-   }
+    }
 }
 .AdminDashboard-Container {
     height: 100%;
@@ -20,7 +20,7 @@
     min-width: 1517.5px;
 }
 .AdminDashboard-Container .Sub-Container .Body {
-    height: 90.5%;
+    height: 92.5%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -87,7 +87,7 @@
 .AdminDashboard-Container .Sub-Container .Body .Sub-Body .NavButton1 .NavButtonText {
     color: yellow;
     width: 80%;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-weight: 500;
     display: flex;
     justify-content: center;
@@ -107,7 +107,7 @@
 }
 .AdminDashboard-Container .Sub-Container .Body .Sub-Body .NavButton2 .NavButtonText {
     width: 80%;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-weight: 500;
     display: flex;
     justify-content: center;
@@ -122,7 +122,7 @@
     justify-content: center;
     align-items: center;
     font-size: 50px;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-weight: 500;
 }
 .Note {
@@ -133,7 +133,7 @@
     align-items: center;
     font-size: 20px;
     font-weight: 500;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     color: red;
 }
 .Setting {
@@ -156,7 +156,7 @@
     justify-content: center;
     align-items: center;
     font-size: 20px;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-weight: 500;
     margin: 0 0 20px 0;
 }
@@ -174,7 +174,7 @@
     justify-content: center;
     align-items: center;
     font-size: 20px;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-weight: 500;
     margin: 0 0 20px 0;
 }
@@ -193,7 +193,7 @@
 .Input-Field .Text {
     width: 200px;
     margin: 8px 10px 8px 0;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-weight: 500;
 }
 .Input-Field .Text-Input {
@@ -203,8 +203,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Roboto';
-   
+    font-family: "Roboto";
+
     font-weight: 500;
     background-color: black;
     color: white;
@@ -213,16 +213,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-weight: 500;
 }
 .Row1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-weight: 500;
     font-size: 12px;
     text-overflow: ellipsis;
     margin: 0 5px;
+}
+
+.MuiPaginationItem-outlinedSecondary.Mui-selected {
+    background-color: white;
+    color: red;
+    border: 1px solid white;
 }
