--- a/src/components/Dashboard/AdminDashboard.scss
+++ b/src/components/Dashboard/AdminDashboard.scss
@@ -20,7 +20,7 @@
     min-width: 1517.5px;
 }
 .AdminDashboard-Container .Sub-Container .Body {
-    height: 90.5%;
+    height: 92.5%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -40,7 +40,7 @@
     box-sizing: border-box;
     transition: width 0.3s;
     z-index: 1;
-    background-color: #202020;
+    background-color: #bdbdbd;
 }
 .AdminDashboard-Container .Sub-Container .Body .Sub-Body .SubBody12 {
     width: 5%;
@@ -51,7 +51,7 @@
     z-index: 1;
     display: flex;
     flex-direction: column;
-    background-color: #202020;
+    background-color: #e5e5e5;
 }
 .AdminDashboard-Container .Sub-Container .Body .Sub-Body .SubBody21 {
     width: 80%;
