--- a/src/components/SignIn.css
+++ b/src/components/SignIn.css
@@ -1,11 +1,17 @@
 .SignIn-Container {
     height: 100%;
     width: 100%;
+    background-color: #202020af;
+}
+.SignIn-Container .SignIn-Container-Sub {
+    height: 90%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #202020;
+    flex-direction: column;
 }
+
 .SignIn-Container .SignUp-SubContainer {
     height: 465px;
     width: 450px;
